[gd_scene load_steps=4 format=3 uid="uid://dialoguebubble001"]

[ext_resource type="Script" path="res://scripts/dialogue_bubble_3d.gd" id="1"]

[sub_resource type="ViewportTexture" id="ViewportTexture_1"]
viewport_path = NodePath("../SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_bubble"]
size = Vector3(3, 1.5, 0.1)

[node name="DialogueBubble3D" type="Node3D"]
script = ExtResource("1")

[node name="Sprite3D" type="Sprite3D" parent="."]
pixel_size = 0.002
billboard = 1
texture = SubResource("ViewportTexture_1")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_bubble")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(512, 256)
render_target_update_mode = 4

[node name="DialoguePanel" type="Panel" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DialogueText" type="RichTextLabel" parent="SubViewport/DialoguePanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Hola! Soy un di√°logo de prueba."
fit_content = true
